@@ -1,3 +1,9 @@
+2002-08-20 Rafal Wojtczuk <nergal@owl.openwall.com>
+       
+	* Merged enhancements which remove 32K users limit
+
+	* added ENABLE_SETFSUGID
+
 2002-08-19  Solar Designer  <solar@owl.openwall.com>
 
 	* tcb.spec, libs/Makefile: Moved libtcb.so symlink to /usr/lib
